[project]
name = "diff-gaussian-rasterization"
version = "0.1.0"
description = "Differentiable Gaussian Rasterization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1+cu118",
    "numpy",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "torch==2.0.1+cu118",
    "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["diff_gaussian_rasterization"]